@@ -1,6 +1,7 @@
 v3.0.10 - in progress
 	* Fixed xbee_frameWait()
 	* Fixed libxbee::Con::Tx() - now throws a libxbee::xbee_etx
+	* xbee_conRx() can now be called to just get the number of packets in the buffer
 
 v3.0.9 - 29 Apr 2013
 	* Fixed high baudrate corruption issues
